--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 
-  <link rel="stylesheet" type="text/css" href="assets/reset.css">
-  <link rel="stylesheet" type="text/css" href="assets/style.css">
+  <link rel="stylesheet" type="text/css" href="Assets/reset.css">
+  <link rel="stylesheet" type="text/css" href="Assets/style.css">
 
 
 </head>
